Temporary DisQuiet Link

--- a/json/projects.json
+++ b/json/projects.json
@@ -46,7 +46,7 @@
             "heroCaption": "",
             "subtitle": "Musical Relaxation App Prototype",
             "tools": "Processing",
-            "readMore": "",
+            "readMore": "https://vimeo.com/165835870",
             "client": "",
             "role": "Audio Designer, Coder, Researcher, Visual Designer",
             "status": "Presented at ISEA Hong Kong and “Design for Social Change” at Hong Kong Polytechnic University and the UC Davis Undergraduate Research Conference",
