soundscapes 404 was caused by capitalization

--- a/json/projects.json
+++ b/json/projects.json
@@ -36,7 +36,7 @@
             "heroCaption": "",
             "subtitle": "VR-based sound visualization experiments",
             "tools": "Unity C#",
-            "readMore": "soundscapesii/index.html",
+            "readMore": "soundscapesII/index.html",
             "client": "",
             "role": "Coder, Researcher, Visual Designer",
             "status": "Presented at ISEA Hong Kong",
@@ -50,7 +50,7 @@
             "heroCaption": "",
             "subtitle": "Browser-based sound visualization experiments",
             "tools": "HTML, CSS, JavaScript, Three.js, Web Audio API",
-            "readMore": "soundscapesi/index.html",
+            "readMore": "soundscapesI/index.html",
             "client": "",
             "role": "Coder, Researcher, Visual Designer, in collaboration with Michelle Lee",
             "status": "Presented at ISEA Hong Kong",
