--- a/json/projects.json
+++ b/json/projects.json
@@ -30,7 +30,7 @@
         },
         {
             "projectTag" : "arirang",
-			"title": "Arirang<br>Visuali-<br>zation",
+			"title": "Arirang<br>Visualization",
             "preview": "arirang/images/heroArirang.gif",
             "hero": "<iframe class='aspect16x9' src='https://www.youtube.com/embed/u4dnh7r_6Wg' frameborder='0' allowfullscreen></iframe>",
             "heroCaption": "A video of the performance on June 10, 2016.",
