--- a/json/projects.json
+++ b/json/projects.json
@@ -5,7 +5,7 @@
 			"title": "Gato",
 			"titleHTML": "Gato",
             "preview": "gato/images/gatoHero.gif",
-            "hero": "<img src='images/heroGato.jpg'>",
+            "hero": "<iframe class='aspect16x9' src='https://player.vimeo.com/video/243570108?autoplay=1' width='100%' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>",
             "heroCaption": "",
             "subtitle": "Interactive installation for babies, children, and their caretakers",
             "tools": "Ableton Live, Adobe Illustrator, Processing, Unity C#, XBox Kinect",
