Revert "php-based redesign"
This reverts commit f9acbd1bb5c157b9b2676b7f53700b8ea4b65b43.

--- a/json/projects.json
+++ b/json/projects.json
@@ -1,92 +1,124 @@
-[
-  {
-    "projectTag": "gato",
-    "title": "Gato",
-    "titleHTML": "Gato",
-    "preview": "gato/images/gatoHero.gif",
-    "hero": "<div class='video video-16x9'><iframe src='https://player.vimeo.com/video/243570108' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>",
-    "heroCaption": "",
-    "subtitle": "Interactive installation for babies, children, and their caretakers",
-    "tools": "Ableton Live, Adobe Illustrator, Processing, Unity C#, XBox Kinect",
-    "readMore": "gato/index.html",
-    "client": "Crocker Art Museum",
-    "role": "Audio Designer, Coder, Visual Designer, in collaboration with Michelle Lee",
-    "status": "Exhibited at the Crocker Art Museum from May 2017 to October 2017",
-    "tags": "#FrontEndDev #GenerativeGraphics #VisualDesign"
-  },
-  {
-    "projectTag": "breathe",
-    "title": "Breathe California Rebranding",
-    "titleHTML": "Breathe California Rebranding",
-    "preview": "breathe/images/breatheHero.jpg",
-    "hero": "<img src='breathe/images/1.jpg'>",
-    "heroCaption": "",
-    "subtitle": "Marketing materials for a local non-profit",
-    "tools": "Adobe After Effects, Adobe Dreamweaver, Adobe Illustrator, Adobe Photoshop, Adobe Premiere, Processing",
-    "readMore": "breathe/index.html",
-    "client": "Breathe California Sacramento Region",
-    "role": "Coder, Visual Designer",
-    "status": "",
-    "tags": "#FrontEndDev #GenerativeGraphics #VisualDesign"
-  },
-  {
-    "projectTag": "fishyflop",
-    "title": "Fishy Flop",
-    "titleHTML": "Fishy Flop",
-    "preview": "fishyflop/images/fishyFlopHero.gif",
-    "hero": "<img src='fishyflop/images/fishyFlopHero-large.gif'>",
-    "heroCaption": "",
-    "subtitle": "UI and gameplay assets for a mobile game",
-    "tools": "Adobe Illustrator",
-    "readMore": "fishyflop/index.html",
-    "client": "The Fishy Flop Team",
-    "role": "UI Designer, Visual Designer",
-    "status": "<a href='https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop'>Available for download from the Google Play Store</a>",
-    "tags": "#VisualDesign"
-  },
-  {
-    "projectTag": "arirang",
-    "title": "Arirang Visualization",
-    "titleHTML": "Arirang<br>Visuali-<br>zation",
-    "preview": "arirang/images/heroArirang.gif",
-    "hero": "<div class='video video-16x9'><iframe src='https://www.youtube.com/embed/u4dnh7r_6Wg' frameborder='0' allowfullscreen></iframe></div>",
-    "heroCaption": "A video of the performance on June 10, 2016.",
-    "subtitle": "Live interactive concert visuals",
-    "tools": "Adobe Illustrator, Processing",
-    "readMore": "arirang/index.html",
-    "client": "Joe Kye",
-    "role": "Coder, Visual Designer, Video Jockey",
-    "status": "Presented at the #SeedToSprout benefit concert, Spring 2016",
-    "tags": "#FrontEndDev #GenerativeGraphics #VisualDesign"
-  },
-  {
-    "projectTag": "disquiet",
-    "title": "DisQuiet Prototype",
-    "titleHTML": "DisQuiet Prototype",
-    "preview": "disquiet/images/heroDisQuiet.gif",
-    "hero": "<div class='video video-16x9'><iframe src='https://player.vimeo.com/video/165835870' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>",
-    "heroCaption": "A video demo of the prototype",
-    "subtitle": "Musical relaxation app for depression and anxiety",
-    "tools": "Processing",
-    "readMore": "disquiet/index.html",
-    "client": "",
-    "role": "Audio Designer, Coder, Researcher, Visual Designer",
-    "status": "Presented at ISEA Hong Kong, “Design for Social Change” at Hong Kong Polytechnic University, and the 2016 UC Davis Undergraduate Research Conference",
-    "tags": "#DesignResearch #FrontEndDev #GenerativeGraphics #UIDesign #VisualDesign"
-  },
-  {
-    "projectTag": "audiovisuals",
-    "title": "AudioVisuals",
-    "titleHTML": "Audio-<br>Visuals",
-    "preview": "audiovisuals/images/heroAudioVisuals.gif",
-    "hero": "<img src='audiovisuals/images/heroAudioVisuals.gif'>",
-    "heroCaption": "A visualization of the song “She Wants” by Metronomy",
-    "subtitle": "Music visualizer",
-    "tools": "Processing",
-    "readMore": "audiovisuals/index.html",
-    "client": "",
-    "role": "Coder, Visual Designer",
-    "status": "",
-    "tags": "#FrontEndDev #GenerativeGraphics #UIDesign #VisualDesign"
-  }
-]
+{
+    "p": [
+		{
+            "projectTag" : "gato",
+			"title": "Gato",
+			"titleHTML": "Gato",
+            "preview": "gato/images/gatoHero.gif",
+            "hero": "<iframe class='aspect16x9' src='https://player.vimeo.com/video/243570108' width='100%' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>",
+            "heroCaption": "",
+            "subtitle": "Interactive installation for babies, children, and their caretakers",
+            "tools": "Ableton Live, Adobe Illustrator, Processing, Unity C#, XBox Kinect",
+            "readMore": "gato/index.html",
+            "client": "Crocker Art Museum",
+            "role": "Audio Designer, Coder, Visual Designer, in collaboration with Michelle Lee",
+            "status": "Exhibited at the Crocker Art Museum from May 2017 to October 2017",
+            "tags": "#FrontEndDev #GenerativeGraphics #VisualDesign"
+        },
+		{
+            "projectTag" : "breathe",
+			"title": "Breathe California Rebranding",
+			"titleHTML": "Breathe California Rebranding",
+            "preview": "breathe/images/breatheHero.jpg",
+            "hero": "<img src='images/1.jpg'>",
+            "heroCaption": "",
+            "subtitle": "Marketing materials for a local non-profit",
+            "tools": "Adobe After Effects, Adobe Dreamweaver, Adobe Illustrator, Adobe Photoshop, Adobe Premiere, Processing",
+            "readMore": "breathe/index.html",
+            "client": "Breathe California Sacramento Region",
+            "role": "Coder, Visual Designer",
+            "status": "Ongoing",
+            "tags": "#FrontEndDev #GenerativeGraphics #VisualDesign"
+        },
+		{
+            "projectTag" : "fishyFlop",
+			"title": "Fishy Flop",
+			"titleHTML": "Fishy Flop",
+            "preview": "fishyflop/images/fishyFlopHero.gif",
+            "hero": "<img src='images/fishyFlopHero-large.gif'>",
+            "heroCaption": "",
+            "subtitle": "UI and gameplay assets for a mobile game",
+            "tools": "Adobe Illustrator",
+            "readMore": "fishyflop/index.html",
+            "client": "The Fishy Flop Team",
+            "role": "UI Designer, Visual Designer",
+            "status": "<a href='https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop'>Available for download from the Google Play Store</a>",
+            "tags": "#VisualDesign"
+        },
+        {
+            "projectTag" : "arirang",
+			"title": "Arirang Visualization",
+			"titleHTML": "Arirang<br>Visuali-<br>zation",
+            "preview": "arirang/images/heroArirang.gif",
+            "hero": "<iframe class='aspect16x9' src='https://www.youtube.com/embed/u4dnh7r_6Wg' frameborder='0' allowfullscreen></iframe>",
+            "heroCaption": "A video of the performance on June 10, 2016.",
+            "subtitle": "Live interactive concert visuals",
+            "tools": "Adobe Illustrator, Processing",
+            "readMore": "arirang/index.html",
+            "client": "Joe Kye",
+            "role": "Coder, Visual Designer, Video Jockey",
+            "status": "Presented at the #SeedToSprout benefit concert, Spring 2016",
+            "tags": "#FrontEndDev #GenerativeGraphics #VisualDesign"
+        },
+        {
+            "projectTag" : "soundScapesII",
+			"title": "SoundScapes II",
+			"titleHTML": "Sound-<br>Scapes II",
+            "preview": "soundscapesII/images/3.JPG",
+            "hero": "<img src='images/3.JPG'>",
+            "heroCaption": "",
+            "subtitle": "VR-based sound visualization experiments",
+            "tools": "Unity C#",
+            "readMore": "soundscapesII/index.html",
+            "client": "",
+            "role": "Coder, Researcher, Visual Designer",
+            "status": "Presented at ISEA Hong Kong",
+            "tags": "#DesignResearch #FrontEndDev #GenerativeGraphics #VisualDesign #VRExperienceDesign #Writing"
+        },
+        {
+            "projectTag" : "soundScapesI",
+			"title": "SoundScapes I",
+			"titleHTML": "Sound-<br>Scapes I",
+            "preview": "soundscapesI/images/heroSoundScapes.png",
+            "hero": "<img src='images/heroSoundScapes.png'>",
+            "heroCaption": "",
+            "subtitle": "Browser-based sound visualization experiments",
+            "tools": "HTML, CSS, JavaScript, Three.js, Web Audio API",
+            "readMore": "soundscapesI/index.html",
+            "client": "",
+            "role": "Coder, Researcher, Visual Designer, in collaboration with Michelle Lee",
+            "status": "Presented at ISEA Hong Kong",
+            "tags": "#DesignResearch #FrontEndDev #GenerativeGraphics #UIDesign #VisualDesign #Writing"
+        },
+        {
+            "projectTag" : "disQuiet",
+			"title": "DisQuiet Prototype",
+			"titleHTML": "DisQuiet Prototype",
+            "preview": "disquiet/images/heroDisQuiet.gif",
+            "hero": "<iframe class='aspect16x9' src='https://player.vimeo.com/video/165835870' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>",
+            "heroCaption": "A video demo of the prototype",
+            "subtitle": "Musical relaxation app for depression and anxiety",
+            "tools": "Processing",
+            "readMore": "disquiet/index.html",
+            "client": "",
+            "role": "Audio Designer, Coder, Researcher, Visual Designer",
+            "status": "Presented at ISEA Hong Kong, “Design for Social Change” at Hong Kong Polytechnic University, and the 2016 UC Davis Undergraduate Research Conference",
+            "tags": "#DesignResearch #FrontEndDev #GenerativeGraphics #UIDesign #VisualDesign"
+        },
+        {
+            "projectTag" : "audioVisuals",
+			"title": "AudioVisuals",
+			"titleHTML": "Audio-<br>Visuals",
+            "preview": "audiovisuals/images/heroAudioVisuals.gif",
+            "hero": "<img src='images/heroAudioVisuals.gif'>",
+            "heroCaption": "A visualization of the song “She Wants” by Metronomy",
+            "subtitle": "Music visualizer",
+            "tools": "Processing",
+            "readMore": "audiovisuals/index.html",
+            "client": "",
+            "role": "Coder, Visual Designer",
+            "status": "",
+            "tags": "#FrontEndDev #GenerativeGraphics #UIDesign #VisualDesign"
+        }
+        ]
+}
